vagrant/traefik.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: traefik-ingress
  name: traefik-ingress
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: traefik-ingress
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: traefik
spec:
 rules:
   - host: traefik.rktnetes
     http:
       paths:
         - path: /
           backend:
             serviceName: traefik-ingress
             servicePort: 8080
